# accessibility-platform

./: .dockerignore  .env.example  .env.prod.example  .env.production.example  .firebaserc  .gitignore  DEVELOPER_SETUP.md  Dockerfile  Dockerfile.worker  FIREBASE_SETUP.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  firebase.json  package-lock.json  package.json  render.yaml
backend/: .dockerignore  Dockerfile  Dockerfile.worker  alembic.ini  main.py  pyproject.toml  requirements.txt  worker_with_health.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  20260304_230340_5c8b518a69b2_day2_models.py  20260307_120000_6a7b8c9d0e1f_day6_audit_log.py  20260405_100000_7b8c9d0e1f2a_invitations_rls.py  20260411_100000_8c9d0e1f2a3b_longitudinal_tables.py
backend/api/: router.py
backend/api/v1/: audit.py  auth.py  evaluations.py  exploration.py  findings.py  health.py  invitations.py  longitudinal.py  organisations.py  profiles.py  reports.py  sampling.py  scanning.py  sse.py  tasks.py  wcag.py
backend/core/: audit.py  auth.py  config.py  email.py  events.py  firebase.py  firestore.py  logging.py  permissions.py
backend/crawler/: __init__.py  robots.py  spider.py
backend/db/: base.py  engine.py  rls.py  session.py  sync_engine.py
backend/longitudinal/: __init__.py  series.py  trends.py
backend/models/: __init__.py  audit_log.py  base_model.py  evaluation.py  evaluation_series.py  finding.py  invitation.py  organisation.py  page.py  report.py  series_snapshot.py  user.py  user_org_role.py  wcag.py
backend/profiles/: __init__.py  definitions.py  engine.py
backend/reports/: __init__.py  csv_export.py  earl_export.py  generator.py  verdict.py
backend/reports/templates/: report_base.html  report_full.html  report_styles.css
backend/sampling/: __init__.py  engine.py  service.py
backend/scanners/: __init__.py  axe_runner.py  axe_wcag_map.py  normalise.py
backend/schemas/: __init__.py  auth.py  common.py  evaluation.py  finding.py  organisation.py  page.py  profile.py  report.py
backend/scripts/: __init__.py  seed_dev.py  seed_wcag.py
backend/storage/: __init__.py  client.py  operations.py
backend/tasks/: __init__.py  celery_app.py  crawl.py  report.py  scan.py
deploy/: deploy.sh  setup.sh  ssl.sh
frontend/: .dockerignore  .env.local.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: BaseButton.vue  BaseCard.vue  BaseInput.vue  Navbar.vue
frontend/src/composables/: usePermissions.js
frontend/src/lib/: api.js  firebase.js  sse.js  useAuth.js
frontend/src/pages/: DashboardPage.vue  DocsPage.vue  EvaluationCreatePage.vue  EvaluationDetailPage.vue  (+12 more)
nginx/: Dockerfile.dev  Dockerfile.prod  default.dev.conf  nginx.conf  nginx.dev.conf  nginx.prod.conf
(+46 files in other folders)
